--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@
                 <div class="pt">
                     <span>
                     <strong>재봉틀에서 컴퓨터로!</strong> <br> <br>
-                    저는 옷이 좋아서 패션디자인전공으로 들어갔지만 그안에서 컴퓨터로 <br>
+                    저는 옷이 좋아서 패션디자인전공으로 들어갔지만 그 안에서 컴퓨터로 <br>
                     트렌드리서치를하고 포토샵과 일러스트를 이용하여 디자인하고 아트보드를 <br>
                     작업하는 과정에 매력을 느껴  웹디자인으로 방향을 바꾸게 되었습니다.  <br><br>
 
                     5개월 국비지원 훈련과정으로 포토샵과 일러스트 활용 그리고 웹, 테블릿, 모바일의 <br>
                     기본적인 그리드시스템 규격과 HTML,CSS를 교육받았습니다. <br><br>
 
-                    저는 시각적인 미를 탐구하고 고민하며 컴퓨터작업을 하는것을 좋아하며<br>
-                    웹디자인은 저를 표현 할수있는 디지털 패션이라 생각합니다!  
+                    저는 시각적인 미를 탐구하고 고민하며 컴퓨터작업을 하는 것을 좋아하며<br>
+                    웹디자인은 저를 표현 할 수 있는 디지털 패션이라 생각합니다!  
                 </span>
                 </div>
 
@@ -341,15 +341,16 @@
                  웹 메인페이지 디자인
                  </p>
                 </li>
-
-               
             </ul>
+
+        
+            </div>
         </section>
         <footer>
             <div class="footerBox">
                 <ul>
                     <li>
-                        <a href="#">
+                        <a href="mailto:94pjb@naver.com">
                             <strong>E-mail : </strong>94pjb@naver.com
                         </a>
                     </li>
