--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="img/icon.png">
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/main.js"></script>
@@ -102,7 +103,7 @@
                         </td>
                     </tr>
 
-                    <th colspan="2">대외활동</th>
+                    <th colspan="2">경험사항</th>
                     <tr class="tr1">
                         <td class="td1">
                             2013.03 - 2013.12 <br>
