--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
                     트렌드리서치를하고 포토샵과 일러스트를 이용하여 디자인하고 아트보드를 
                     작업하는 과정에 매력을 느껴  웹디자인으로 방향을 바꾸게 되었습니다.  <br><br>
 
-                    5개월 국비지원 훈련과정으로 포토샵과 일러스트 활용 그리고 웹, 테블릿, 모바일의 
-                    기본적인 그리드시스템 규격과 HTML,CSS를 교육받았습니다. <br><br>
+                    포토샵과 일러스트 활용 그리고 웹, 테블릿, 모바일의기본적인 그리드시스템 <br>
+                    규격을 숙지하고있으며 HTML5,CSS3를 활용할수있습니다. <br><br>
 
                     저는 시각적인 미를 탐구하고 고민하며 컴퓨터작업을 하는것을 좋아하며
                     웹디자인은 저를 표현 할 수 있는 디지털 패션이라 생각합니다!  
